--- a/package.json
+++ b/package.json
@@ -34,10 +34,16 @@
     "zod": "^3.25.56"
   },
   "devDependencies": {
+    "@stagewise-plugins/react": "^0.4.7",
+    "@stagewise/toolbar": "^0.4.7",
+    "@stagewise/toolbar-next": "^0.4.7",
     "@tailwindcss/postcss": "^4.1.8",
     "@types/node": "^20.17.57",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-scroll": "^1.8.10",
+    "eslint": "^9",
+    "eslint-config-next": "15.3.3",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.2",
     "typescript": "^5"
