--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.511.0",
     "next": "15.3.3",
@@ -31,6 +32,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.57.0",
     "react-scroll": "^1.9.3",
+    "react-zoom-pan-pinch": "^3.7.0",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
     "zod": "^3.25.56"
