--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 NEXT_PUBLIC_API_BASE_URL="https://my.wb24.biz/api/v1"
 NEXT_PUBLIC_API_DEV_URL="https://dev.wb24.biz/api/v1"
-NEXT_PUBLIC_BASE_URL="http://test24.wb24.biz"
+NEXT_PUBLIC_BASE_URL="http://wb24.biz"
