--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
+    "build:static": "next build",
     "start": "next start",
+    "serve": "npx serve@latest dist",
     "test": "next build",
     "lint": "next lint"
   },
